--- a/友链/index.html
+++ b/友链/index.html
@@ -166,11 +166,11 @@
     </div>
     
     <div class="content" v-pre>
-        <p>​    <a target="_blank" rel="noopener" href="https://www.luogu.com.cn/">Luogu</a></p>
-<p>​    <a target="_blank" rel="noopener" href="https://llingy.top/">llingy</a></p>
+        <p>​    <a target="_blank" rel="noopener" href="https://www.luogu.com.cn">Luogu</a></p>
+<p>​    <a target="_blank" rel="noopener" href="https://llingy.top">llingy</a></p>
 <p>​    <a target="_blank" rel="noopener" href="https://cyberangel-6gfv3c4g543a05f3-1255714490.ap-shanghai.app.tcloudbase.com/">CyberAngel(whhsteven)</a></p>
-<p>​    <a target="_blank" rel="noopener" href="https://www.nightmarealita.top/">NightmareAlita</a></p>
-<p>​    <a target="_blank" rel="noopener" href="https://nalemy.github.io/">nalemy</a></p>
+<p>​    <a target="_blank" rel="noopener" href="https://www.nightmarealita.top">NightmareAlita</a></p>
+<p>​    <a target="_blank" rel="noopener" href="https://nalemy.github.io">nalemy</a></p>
 
     </div>
     
