deploy: 9c9d0bf6d3c6e354e7ae28a66fdbbaa206cf9f4b

--- a/Horgwarts's Lycoris人设.html
+++ b/Horgwarts's Lycoris人设.html
@@ -3,9 +3,9 @@
 <html lang="zh-Hans">
     <head>
         <meta charset="utf-8" />
-        <title> | LycoReco SN 支部</title>
+        <title> | 星空之下</title>
         <meta name="author" content="Slongod" />
-        <meta name="description" content="SlongodのBlog" />
+        <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <link rel="icon" href="https://cdn.luogu.com.cn/upload/image_hosting/dnunbxm4.png" />
@@ -59,7 +59,7 @@
             <div id="menu" :class="{ hidden: hiddenMenu, 'menu-color': menuColor}">
     <nav id="desktop-menu">
         <a class="title" href="/">
-            <span>LYCORECO SN 支部</span>
+            <span>星空之下</span>
         </a>
         
         <a href="/">
@@ -91,7 +91,7 @@
     <nav id="mobile-menu">
         <div class="title" @click="showMenuItems = !showMenuItems">
             <i class="fa-solid fa-bars fa-fw"></i>
-            <span>&emsp;LYCORECO SN 支部</span>
+            <span>&emsp;星空之下</span>
         </div>
         <transition name="slide">
             <div class="items" v-show="showMenuItems">
@@ -190,7 +190,7 @@
     <div id="footer-wrap">
         <div>
             &copy;
-            2022 - 2024 LycoReco SN 支部
+            2022 - 2024 星空之下
             <span id="footer-icon">
                 <i class="fa-solid fa-font-awesome fa-fw"></i>
             </span>
