deploy: 1430b6cfadc8b5459f47f7a7641e9a33af9cb677

--- a/友链/index.html
+++ b/友链/index.html
@@ -155,7 +155,7 @@
             <span class="icon">
                 <i class="fa-solid fa-calendar fa-fw"></i>
             </span>
-            2024/12/19
+            2024/12/20
         </span>
         
         
@@ -170,6 +170,7 @@ target="_blank" rel="noopener" href="https://www.nightmarealita.top">NightmareAl
 <li><p><a
 target="_blank" rel="noopener" href="https://cyberangel-6gfv3c4g543a05f3-1255714490.ap-shanghai.app.tcloudbase.com/">CyberAngel(whhsteven)</a></p></li>
 <li><p><a target="_blank" rel="noopener" href="https://nalemy.top">nalemy</a></p></li>
+<li><p><a href="auiunu.top">ain</a></p></li>
 </ul>
 
     </div>
